@@ -3,6 +3,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/target/generic.py:
+  Beef up autoresume to record path metadata and check it later
+
   13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/target/snapshot.py:
   Add --exclude /packages/ to the rsync line for the snapshot
